# CfRR-intro-to_LLMs

./: .env.example  .gitignore  checklist.md  intro_to_llms.odp  main.py  ongoing_whitepaper.md  pyproject.toml  timings.md  todo.md
checklist/github_requirements/: requirements_overview.md
diagrams/attention/: attention.fdb_latexmk  attention.fls  attention.tex
diagrams/llm_architecture/: llm_architecture_nexttoken.tex
diagrams/neural_network/: draw_networks.py  equations.md
diagrams/rnn/: 01_sliding_window_rnn.py  02_one_hot_encoding.py  03_rnn_overview.py
diagrams/similar_words/: similar_words.fdb_latexmk  similar_words.fls  similar_words.tex  similar_words_ungrouped.fdb_latexmk  similar_words_ungrouped.fls  similar_words_ungrouped.tex
documents/: model_choice.md
documents/concepts/: embeddings_and_finetuning.md  finetuning_vs_pretraining.md  system_vs_user_prompts.md
documents/structure/: class_overview.md
examples/fish/: fish_classification copy.ipynb  fish_classification.ipynb
examples/neural_network/: config.json  full_equations.md
llm_finetuning_processes/llama2/: main.py  pyproject.toml
llm_finetuning_processes/open_ai/: api_creation.md  main.py  plan.md  pyproject.toml
notebooks/: 01_tokenization_explorer.ipynb  02_embeddings_visualization copy.ipynb  02_embeddings_visualization.ipynb  03_prompt_engineering_playground.ipynb  04_temperature_and_sampling.ipynb
scripts/: embeddings.py  tokenisation.py
slides/: link_notes.md  part_one_slide_plan.md  part_two_slide_plan.md  rag_and_hallucinations.md  slide_plan copy.md
(+72 files in other folders)
