[project]
name = "intro-to-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "transformers>=5.5.4",
    "umap-learn>=0.5.12",
]
